2020-03-05  Markus Gans  <guru.mail@muenster.de>
	* Unbuffered reading of keystrokes for better latency
	* Mouse adjustments when resizing an rxvt terminal

2020-02-25  Markus Gans  <guru.mail@muenster.de>
	* New command line switch "--no-terminal-data-request" to disable 
	  font and title determination

2020-02-19  Markus Gans  <guru.mail@muenster.de>
	* Some small code improvements
	* SGRoptimizer improved

2020-02-16  Markus Gans  <guru.mail@muenster.de>
	* Printing a FStyle object allows you to change video attributes

2020-02-13  Markus Gans  <guru.mail@muenster.de>
	* Rename setTransShadow() to setColorOverlay()

2020-02-11  Markus Gans  <guru.mail@muenster.de>
	* Fix collapse() and expand() in FListViewItem()

2020-02-09  Markus Gans  <guru.mail@muenster.de>
	* Adding a tty check for stdin
	* An application structure diagram was added to the document 
	  of the first steps

2020-02-04  Markus Gans  <guru.mail@muenster.de>
	* Fix in FListViewIterator
	* Add screenshorts to the first steps document

2020-02-02  Markus Gans  <guru.mail@muenster.de>
	* The methods clear() and remove() were added to FListView
	* Add some const type qualifiers
	* A small GNU autoconf-archive check

2020-01-12  Markus Gans  <guru.mail@muenster.de>
	* Add a "widget layout" chapter to the first steps document

2020-01-09  Markus Gans  <guru.mail@muenster.de>
	* With setText() and clearText() the text in the edit line can be changed 
	  without changing the content of the combo box
	* The setCurrentItem() method was added to the FComboBox widget class. 
	  Thanks cybin for the sample code

2020-01-03  Markus Gans  <guru.mail@muenster.de>
	* Illustrations to explain the widget layout

2019-12-31  Markus Gans  <guru.mail@muenster.de>
	* The new SGRoptimizer class allows several consecutive parameters 
	  from the SGR (Select Graphic Rendition) attributes to be combined 
	  into one

2019-12-23  Markus Gans  <guru.mail@muenster.de>