@@ -118,7 +118,7 @@ class FTermcap final
     static void      termcapNumerics();
     static void      termcapStrings (char*&);
     static void      termcapKeys (char*&);
-    static void      termcapKeysVt100 (char*&);
+    static void      termcapKeysVt100();
 
     // Data member
     static FTermData*      fterm_data;
